--- a/index.html
+++ b/index.html
@@ -2,15 +2,50 @@
 <html lang="en">
 
 <head>
+  <!-- Character Encoding -->
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+  <!-- Mobile Responsive Meta Tag -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/jpeg" href="/icon.jpg" />
+
+  <!-- Page Title -->
+  <title>AR Quick Page - Create Landing Pages Easily</title>
+
+  <!-- Meta Description -->
+  <meta name="description"
+    content="Create stunning landing pages effortlessly with AR Quick Page. Generate pages without coding knowledge, manage orders, and boost your business online." />
+
+  <!-- Keywords (Optional) -->
+  <meta name="keywords"
+    content="landing page generator, AR Quick Page, no-code platform, business tools, order management, easy website creation" />
+
+  <!-- Author Information -->
+  <meta name="author" content="AR IT Solutions" />
+
+  <!-- Open Graph / Facebook Meta Tags -->
+  <meta property="og:title" content="AR Quick Page - Easy Landing Page Generator" />
+  <meta property="og:description"
+    content="Design and manage beautiful landing pages without coding. Boost your business with AR Quick Page." />
+  <meta property="og:image" content="/icon.jpg" />
+  <meta property="og:url" content="https://yourwebsite.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="AR Quick Page - Create Landing Pages Easily" />
+  <meta name="twitter:description"
+    content="No coding needed to create professional landing pages with AR Quick Page." />
+  <meta name="twitter:image" content="/icon.jpg" />
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-  <title> Landing page</title>
 </head>
 
 <body>
